# speechcatcher

./: .gitignore  IEEEbib.bst  IMPLEMENTATION_SUMMARY.md  LICENSE  Neujahrsansprache.mp4.json  Neujahrsansprache.mp4.json.25600  Neujahrsansprache.mp4.json.8192  Neujahrsansprache.mp4.json.espnet  Neujahrsansprache.mp4.json.native  Neujahrsansprache.mp4.txt  Neujahrsansprache.mp4.txt.25600  Neujahrsansprache.mp4.txt.8192  Neujahrsansprache.mp4.txt.espnet  Neujahrsansprache.mp4.txt.expected  Neujahrsansprache.mp4.txt.native.fixed  Neujahrsansprache.mp4.txt.native.n1  Neujahrsansprache_20s.mp4.json  Neujahrsansprache_20s.mp4.txt  Neujahrsansprache_40s.mp4.json  Neujahrsansprache_40s.mp4.json.25600  Neujahrsansprache_40s.mp4.json.8192  Neujahrsansprache_40s.mp4.txt  Neujahrsansprache_40s.mp4.txt.25600  Neujahrsansprache_5s.mp4.json  Neujahrsansprache_5s.mp4.txt  README.md  SLT2021_tsunoo_arxiv.tex  WEIGHT_LOADING_NOTES.md  asr_inference_streaming.py  calc_wer.py  pyproject.toml  requirements.txt  setup.py  simple_endpointing.py  speechcatcher.py  speechcatcher_server.service  test_ctc_timing.py  test_decoder_scores_debug.py  test_decoder_weights.py  test_encoder_buffer_debug.py  (+11 more)
docs/: DECODER_README.md  README.md  SESSION_SUMMARY.md  compare.md  comparision.md  investigation_summary.md
segments/: combined.txt  combined_so_far.txt  segment_0.mp4.json.native  segment_0.mp4.txt.native  segment_1.mp4.json.native  segment_1.mp4.txt.native  segment_2.mp4.json.native  segment_2.mp4.txt.native  segment_3.mp4.json.native  segment_3.mp4.txt.native  segment_4.mp4.json.native  segment_4.mp4.txt.native  segment_5.mp4.json.native  segment_5.mp4.txt.native  segment_6.mp4.json.native  segment_6.mp4.txt.native  segment_7.mp4.json.native  segment_7.mp4.txt.native
speechcatcher/: calc_wer.py  compute_wer.py  decode_kaldidir.py  simple_endpointing.py  simple_endpointing2.py  speech2text_streaming.py  speechcatcher.py  speechcatcher_server.py  vosk_test_client.py  websocket_demo.html
speechcatcher.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_batch_mode.py  test_bbd_debug.py  test_bbd_state.py  test_beam_search_trace.py  test_beam_trace_chunks.py  test_checkpoint_loading.py  test_chunk5_decoder_comparison.py  test_combined_scores.py  (+30 more)
(+67 files in other folders)
